# kpm_rc-xapp

./: Dockerfile  LICENSE  README.md  go.mod  go.sum  hwApp.go  kpm_rc.go
charts/: hw-go-1.0.0.tgz  index-cache.yaml
config/: config-file.json
e2ap/: wrapper.c  wrapper.h
e2ap/headers/: asn_system.h
e2ap/lib/: asn_application.c  asn_random_fill.c
e2sm/: wrapper.c  wrapper.h
e2sm/headers/: Criticality.h  ENB-ID-Choice.h  ENB-ID.h  ENGNB-ID.h  GNB-CU-UP-ID.h  GNB-DU-ID.h  GNB-ID-Choice.h  GlobalE2node-ID.h  GlobalE2node-eNB-ID.h  GlobalE2node-en-gNB-ID.h  GlobalE2node-gNB-ID.h  GlobalE2node-ng-eNB-ID.h  GlobalENB-ID.h  GlobalKPMnode-ID.h  GlobalKPMnode-eNB-ID.h  GlobalKPMnode-en-gNB-ID.h  GlobalKPMnode-gNB-ID.h  GlobalKPMnode-ng-eNB-ID.h  GlobalenGNB-ID.h  GlobalgNB-ID.h  GlobalngeNB-ID.h  PLMN-Identity.h  Presence.h  ProcedureCode.h  ProtocolIE-ID.h  TriggeringMessage.h  asn_constant.h  asn_system.h
e2sm/lib/: Criticality.c  ENB-ID-Choice.c  ENB-ID.c  ENGNB-ID.c  GNB-CU-UP-ID.c  GNB-DU-ID.c  GNB-ID-Choice.c  GlobalE2node-ID.c  GlobalE2node-eNB-ID.c  GlobalE2node-en-gNB-ID.c  GlobalE2node-gNB-ID.c  GlobalE2node-ng-eNB-ID.c  GlobalENB-ID.c  GlobalKPMnode-ID.c  GlobalKPMnode-eNB-ID.c  GlobalKPMnode-en-gNB-ID.c  GlobalKPMnode-gNB-ID.c  GlobalKPMnode-ng-eNB-ID.c  GlobalenGNB-ID.c  GlobalgNB-ID.c  GlobalngeNB-ID.c  PLMN-Identity.c  Presence.c  ProcedureCode.c  ProtocolIE-ID.c  TriggeringMessage.c  asn_application.c  asn_random_fill.c
kpmv2/: README.me  wrapper.c  wrapper.h
kpmv2/hdr/: AMF-UE-NGAP-ID.h  AMFPointer.h  AMFRegionID.h  AMFSetID.h  BinRangeDefinition.h  CGI.h  CoreCPID.h  DistMeasurementBinRangeItem.h  DistMeasurementBinRangeList.h  E-UTRA-ARFCN.h  E-UTRA-PCI.h  E2SM-KPM-ActionDefinition-Format2.h  E2SM-KPM-ActionDefinition-Format3.h  E2SM-KPM-ActionDefinition-Format5.h  E2SM-KPM-IndicationHeader-Format1.h  E2SM-KPM-IndicationMessage.h  EN-GNB-ID.h  EUTRA-CGI.h  EUTRACellIdentity.h  EXTERNAL.h  FreqBandNrItem.h  GNB-CU-CP-UE-E1AP-ID.h  GNB-CU-UE-F1AP-ID.h  GlobalGNB-ID.h  GlobalNGRANNodeID.h  GlobalenGNB-ID.h  GranularityPeriod.h  GroupID.h  Interface-MessageID.h  InterfaceID-F1.h  InterfaceID-W1.h  InterfaceID-X2.h  InterfaceID-Xn.h  LabelInfoItem.h  MME-Code.h  MME-Group-ID.h  MME-UE-S1AP-ID.h  Makefile.am.libasncodec  MatchingCondList.h  MatchingUEidItem-PerGP.h  (+173 more)
kpmv2/hdr_cpy/: AMF-UE-NGAP-ID.h  AMFPointer.h  AMFRegionID.h  AMFSetID.h  BinIndex.h  BinRangeDefinition.h  BinRangeItem.h  BinRangeList.h  BinRangeValue.h  CGI.h  CMakeLists.txt  CoreCPID.h  DistMeasurementBinRangeItem.h  DistMeasurementBinRangeList.h  E-UTRA-ARFCN.h  E-UTRA-PCI.h  E-UTRA-TAC.h  E2SM-KPM-ActionDefinition-Format1.h  E2SM-KPM-ActionDefinition-Format2.h  E2SM-KPM-ActionDefinition-Format3.h  E2SM-KPM-ActionDefinition-Format4.h  E2SM-KPM-ActionDefinition-Format5.h  E2SM-KPM-ActionDefinition.h  E2SM-KPM-EventTriggerDefinition-Format1.h  E2SM-KPM-EventTriggerDefinition.h  E2SM-KPM-IndicationHeader-Format1.h  E2SM-KPM-IndicationHeader.h  E2SM-KPM-IndicationMessage-Format1.h  E2SM-KPM-IndicationMessage-Format2.h  E2SM-KPM-IndicationMessage-Format3.h  E2SM-KPM-IndicationMessage.h  E2SM-KPM-RANfunction-Description.h  EN-GNB-ID.h  ENB-ID.h  ENB-UE-X2AP-ID-Extension.h  ENB-UE-X2AP-ID.h  EUTRA-CGI.h  EUTRACellIdentity.h  FiveGS-TAC.h  FiveQI.h  (+116 more)
kpmv2/lib/: AMFPointer.c  AMFRegionID.c  BinIndex.c  BinRangeDefinition.c  CGI.c  E-UTRA-ARFCN.c  E-UTRA-PCI.c  E2SM-KPM-ActionDefinition-Format3.c  E2SM-KPM-ActionDefinition-Format5.c  E2SM-KPM-ActionDefinition.c  E2SM-KPM-EventTriggerDefinition.c  E2SM-KPM-IndicationHeader-Format1.c  E2SM-KPM-IndicationMessage-Format1.c  E2SM-KPM-IndicationMessage-Format3.c  E2SM-KPM-IndicationMessage.c  ENB-ID.c  EUTRA-CGI.c  EXTERNAL.c  FiveGS-TAC.c  FiveQI.c  GNB-CU-UP-ID.c  GNB-ID.c  GlobalENB-ID.c  GlobalenGNB-ID.c  GroupID.c  INTEGER_ber.c  Interface-MessageID.c  InterfaceID-E1.c  InterfaceID-F1.c  InterfaceID-X2.c  InterfaceIdentifier.c  InterfaceType.c  LabelInfoItem.c  LabelInfoList.c  MatchingCondItem-Choice.c  MatchingCondList.c  MatchingUEidList-PerGP.c  MatchingUEidList.c  MatchingUEidPerGP.c  MatchingUEidPerSubItem.c  (+134 more)
kpmv2/lib_cpy/: AMF-UE-NGAP-ID.c  AMFPointer.c  AMFRegionID.c  AMFSetID.c  BinIndex.c  BinRangeDefinition.c  BinRangeItem.c  BinRangeList.c  BinRangeValue.c  CGI.c  CoreCPID.c  DistMeasurementBinRangeItem.c  DistMeasurementBinRangeList.c  E-UTRA-ARFCN.c  E-UTRA-PCI.c  E-UTRA-TAC.c  E2SM-KPM-ActionDefinition-Format1.c  E2SM-KPM-ActionDefinition-Format2.c  E2SM-KPM-ActionDefinition-Format3.c  E2SM-KPM-ActionDefinition-Format4.c  E2SM-KPM-ActionDefinition-Format5.c  E2SM-KPM-ActionDefinition.c  E2SM-KPM-EventTriggerDefinition-Format1.c  E2SM-KPM-EventTriggerDefinition.c  E2SM-KPM-IndicationHeader-Format1.c  E2SM-KPM-IndicationHeader.c  EN-GNB-ID.c  ENB-ID.c  (+125 more)
rcv1/: README.me  tags  wrapper.c  wrapper.h
(+756 files in other folders)
